# nemo_code_agent_demo

./: .dockerignore  .env.example  Dockerfile  README.md  demo.ipynb  pyproject.toml  run.sh
configs/: config.yml  llms.yml
guardrails/: config.yml  guardrails.co
knowledge/: static.md
src/nemo_code_agent/: guardrails.py  nat_graph.py  register.py  workflow.py
src/nemo_code_agent/cli/: main.py  repl.py
src/nemo_code_agent/tools/: coder_tool.py  filesystem.py  knowledge.py
src/nemo_code_agent/utils/: logger.py
